// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail /> by default should render the right structure 1`] = `
<Thumbnail
  alternativeText="Thumbnail element"
  className="🚥"
  imageUrl="www.⚡️.net"
  isSquare={false}
  label={null}
  placeholderImageUrl={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <ResponsiveImage
      alternativeText="Thumbnail element"
      hasRoundedCorners={false}
      imageHeight={null}
      imageNotFoundLabelText="Image not found!"
      imageTitle="Image Title"
      imageUrl="www.⚡️.net"
      imageWidth={null}
      isAvatar={false}
      isCircular={false}
      isFluid={true}
      label={null}
      placeholderImageUrl={null}
      sources={Array []}
    >
      <picture
        className="responsive-image is-fluid"
        role="figure"
      >
        <Image
          alt="Thumbnail element"
          as="img"
          avatar={false}
          fluid={true}
          height={null}
          src="www.⚡️.net"
          title="Image Title"
          ui={true}
          width={null}
        >
          <img
            alt="Thumbnail element"
            className="ui fluid image"
            height={null}
            src="www.⚡️.net"
            title="Image Title"
            width={null}
          />
        </Image>
      </picture>
    </ResponsiveImage>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isCircular\` is true should render the right structure 1`] = `
<Thumbnail
  alternativeText="Thumbnail element"
  className="🚥"
  imageUrl="www.⚡️.net"
  isCircular={true}
  isSquare={false}
  label={null}
  placeholderImageUrl={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 proportional-width-and-height"
  >
    <ResponsiveImage
      alternativeText="Thumbnail element"
      hasRoundedCorners={false}
      imageHeight={null}
      imageNotFoundLabelText="Image not found!"
      imageTitle="Image Title"
      imageUrl="www.⚡️.net"
      imageWidth={null}
      isAvatar={false}
      isCircular={true}
      isFluid={true}
      label={null}
      placeholderImageUrl={null}
      sources={Array []}
    >
      <picture
        className="responsive-image is-fluid circular"
        role="figure"
      >
        <Image
          alt="Thumbnail element"
          as="img"
          avatar={false}
          fluid={true}
          height={null}
          src="www.⚡️.net"
          title="Image Title"
          ui={true}
          width={null}
        >
          <img
            alt="Thumbnail element"
            className="ui fluid image"
            height={null}
            src="www.⚡️.net"
            title="Image Title"
            width={null}
          />
        </Image>
      </picture>
    </ResponsiveImage>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isSquare\` is true should render the right structure 1`] = `
<Thumbnail
  alternativeText="Thumbnail element"
  className="🚥"
  imageUrl="www.⚡️.net"
  isCircular={true}
  isSquare={false}
  label={null}
  placeholderImageUrl={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 proportional-width-and-height"
  >
    <ResponsiveImage
      alternativeText="Thumbnail element"
      hasRoundedCorners={false}
      imageHeight={null}
      imageNotFoundLabelText="Image not found!"
      imageTitle="Image Title"
      imageUrl="www.⚡️.net"
      imageWidth={null}
      isAvatar={false}
      isCircular={true}
      isFluid={true}
      label={null}
      placeholderImageUrl={null}
      sources={Array []}
    >
      <picture
        className="responsive-image is-fluid circular"
        role="figure"
      >
        <Image
          alt="Thumbnail element"
          as="img"
          avatar={false}
          fluid={true}
          height={null}
          src="www.⚡️.net"
          title="Image Title"
          ui={true}
          width={null}
        >
          <img
            alt="Thumbnail element"
            className="ui fluid image"
            height={null}
            src="www.⚡️.net"
            title="Image Title"
            width={null}
          />
        </Image>
      </picture>
    </ResponsiveImage>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.size\` is supplied should render the right structure 1`] = `
<Thumbnail
  alternativeText="Thumbnail element"
  className="🚥"
  imageUrl="www.⚡️.net"
  isSquare={false}
  label={null}
  placeholderImageUrl={null}
  size="small"
>
  <div
    className="ui thumbnail 🚥 small"
  >
    <ResponsiveImage
      alternativeText="Thumbnail element"
      hasRoundedCorners={false}
      imageHeight={null}
      imageNotFoundLabelText="Image not found!"
      imageTitle="Image Title"
      imageUrl="www.⚡️.net"
      imageWidth={null}
      isAvatar={false}
      isCircular={false}
      isFluid={true}
      label={null}
      placeholderImageUrl={null}
      sources={Array []}
    >
      <picture
        className="responsive-image is-fluid"
        role="figure"
      >
        <Image
          alt="Thumbnail element"
          as="img"
          avatar={false}
          fluid={true}
          height={null}
          src="www.⚡️.net"
          title="Image Title"
          ui={true}
          width={null}
        >
          <img
            alt="Thumbnail element"
            className="ui fluid image"
            height={null}
            src="www.⚡️.net"
            title="Image Title"
            width={null}
          />
        </Image>
      </picture>
    </ResponsiveImage>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> should render the right structure 1`] = `
<Thumbnail
  alternativeText="Thumbnail element"
  className="🚥"
  imageUrl="www.⚡️.net"
  isSquare={false}
  label={null}
  placeholderImageUrl={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <ResponsiveImage
      alternativeText="Thumbnail element"
      hasRoundedCorners={false}
      imageHeight={null}
      imageNotFoundLabelText="Image not found!"
      imageTitle="Image Title"
      imageUrl="www.⚡️.net"
      imageWidth={null}
      isAvatar={false}
      isCircular={false}
      isFluid={true}
      label={null}
      placeholderImageUrl={null}
      sources={Array []}
    >
      <picture
        className="responsive-image is-fluid"
        role="figure"
      >
        <Image
          alt="Thumbnail element"
          as="img"
          avatar={false}
          fluid={true}
          height={null}
          src="www.⚡️.net"
          title="Image Title"
          ui={true}
          width={null}
        >
          <img
            alt="Thumbnail element"
            className="ui fluid image"
            height={null}
            src="www.⚡️.net"
            title="Image Title"
            width={null}
          />
        </Image>
      </picture>
    </ResponsiveImage>
  </div>
</Thumbnail>
`;
